# book-translation-cli

./: .gitignore  Booksmith-GUI.cmd  Booksmith-GUI.vbs  CHANGELOG.md  README.ja.md  README.md  README.zh-CN.md  build-gui-exe.ps1  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md
scripts/: build-gui-exe.ps1
src/book_translator/: __main__.py  app_services.py  cli.py  config.py  models.py  pipeline.py  utils.py
src/booksmith/: __main__.py  app_services.py  cli.py  config.py  models.py  pipeline.py  (+2 more)
tests/: test_app_services.py  test_build_gui_script.py  test_chaptering.py  test_chunking.py  test_cli_smoke.py  test_config.py  test_entry_points.py  test_epub_renderer.py  test_extractors.py  test_gui_app.py  test_gui_secrets.py  test_gui_services.py  test_gui_tasks.py  test_output_assembler.py  test_pdf_raster.py  test_pipeline_integration.py  test_polished_pdf.py  test_provider_catalog.py  test_providers.py  test_publishing_assets.py  test_publishing_config.py  test_publishing_consensus.py  test_publishing_deep_review.py  test_publishing_lexicon.py  test_publishing_pipeline.py  test_publishing_source_audit.py  test_publishing_source_audit_reference_tail.py  test_publishing_source_audit_wrappers.py  test_publishing_structure.py  test_publishing_structure_single_line.py  test_publishing_structure_wrappers.py  test_publishing_style.py  test_publishing_title_sync.py  test_publishing_workspace.py  test_release_gate.py  test_state_workspace.py  test_structured_output_assembler.py  test_title_enrichment.py  test_validation.py  test_validation_reference_lines.py
(+114 files in other folders)
