[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "book-translation-cli"
version = "0.1.0"
description = "Engineering-grade CLI translator for text PDFs and EPUBs."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "ZWLF"}
]
dependencies = [
  "beautifulsoup4>=4.12.3",
  "ebooklib>=0.18",
  "httpx>=0.27.2",
  "pydantic>=2.9.2",
  "pypdf>=5.0.1",
  "reportlab>=4.2.5",
  "rich>=13.9.2",
  "tiktoken>=0.8.0",
  "typer>=0.12.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.2",
  "pytest-asyncio>=1.1.0",
  "ruff>=0.12.0",
]

[project.scripts]
book-translator = "book_translator.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
